--- a/jjjjj.html
+++ b/jjjjj.html
@@ -96,11 +96,16 @@
                 <button class="fullscreen-btn" onclick="toggleFullScreen('iframe1')">Toggle Fullscreen</button>
                 <iframe id="iframe1" width="100%" height="315" src="https://net4gmur.wixsite.com/herbingtonhigh" frameborder="0" allowfullscreen></iframe>
             </div>
-
+            
             <div class="work">
-                <button class="fullscreen-btn" onclick="toggleFullScreen('iframe1')">Toggle Fullscreen</button>
-                <iframe width="100%" height="315" src="https://net4gmur.wixsite.com/herbington-high-scho" frameborder="0" allowfullscreen></iframe>
+                <button class="fullscreen-btn" onclick="toggleFullScreen('iframe2')">Toggle Fullscreen</button>
+                <iframe id="iframe2" width="100%" height="315" src="https://net4gmur.wixsite.com/herbington-high-scho" frameborder="0" allowfullscreen></iframe>
             </div>
+            
+            <div class="work">
+                <button class="fullscreen-btn" onclick="toggleFullScreen('iframe3')">Toggle Fullscreen</button>
+                <iframe id="iframe3" width="100%" height="315" src="https://net4gmur.wixsite.com/s-bakery" frameborder="0" allowfullscreen></iframe>
+            </div>            
 
         </div>
     </div>
