--- a/jjjjj.html
+++ b/jjjjj.html
@@ -94,12 +94,13 @@
         <div class="work-list">
             <div class="work">
                 <button class="fullscreen-btn" onclick="toggleFullScreen('iframe1')">Toggle Fullscreen</button>
-                <iframe id="iframe1" width="100%" height="315" src="https://net4gmur.wixsite.com/herbingtonhigh" frameborder="0" allowfullscreen></iframe>
+                <iframe id="iframe1" width="100%" height="315" src="https://net4gmur.wixsite.com/herbingtonhigh"></iframe>
             </div>
 
             <div class="work">
-                <button class="fullscreen-btn" onclick="toggleFullScreen('iframe1')">Toggle Fullscreen</button>
-                <iframe width="100%" height="315" src="https://net4gmur.wixsite.com/herbington-high-scho" frameborder="0" allowfullscreen></iframe>
+                <button class="fullscreen-btn" onclick="toggleFullScreen('iframe2')">Toggle Fullscreen</button>
+                <iframe id="iframe2" width="100%" height="315" src="https://net4gmur.wixsite.com/herbington-high-scho"></iframe>
+
             </div>
 
         </div>
