--- a/jjjjj.html
+++ b/jjjjj.html
@@ -31,10 +31,10 @@
         <p>Explore my work and expertise in web development.</p>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank" title="LinkedIn">
-                <img src="C:\Users\Evans\Downloads\icons8-linkedin-24.png" alt="LinkedIn">
+                <img src="assets/icons/linkedin.png" alt="LinkedIn">
             </a>
             <a href="https://twitter.com/your_twitter_handle" target="_blank" title="Twitter">
-                <img src="C:\Users\Evans\Downloads\icons8-twitter-100.png" alt="Twitter">
+                <img src="assets/icons/twitter.png" alt="Twitter">
             </a>
             <!-- Add more social media icons as needed -->
         </div>
