--- a/jjjjj.html
+++ b/jjjjj.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="jjjjj.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Nicholai Thomas - Portfolio</title>
@@ -84,6 +84,6 @@
         </div>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="jjjjj.js"></script>
 </body>
 </html>
