--- a/jjjjj.html
+++ b/jjjjj.html
@@ -25,11 +25,32 @@
     <section id="work" class="py-16 text-center">
         <h2 class="text-3xl font-semibold mb-6">Previous Work</h2>
         <div class="flex justify-center space-x-4">
-            <div class="bg-white p-6 shadow-md rounded-lg">Project 1</div>
-            <div class="bg-white p-6 shadow-md rounded-lg">Project 2</div>
-            <div class="bg-white p-6 shadow-md rounded-lg">Project 3</div>
-        </div>
-    </section>
+        <!-- Card 1 - Link to a live Wix website -->
+        <a href="https://your-wix-website-1.com" target="_blank" class="bg-white p-6 shadow-md rounded-lg hover:bg-gray-200 transition">
+            <div class="text-center">
+                <h3 class="font-semibold text-lg">Wix Website 1</h3>
+                <p class="mt-2 text-gray-600">Description of the project goes here.</p>
+            </div>
+        </a>
+
+        <!-- Card 2 - Link to a live Wix website -->
+        <a href="https://your-wix-website-2.com" target="_blank" class="bg-white p-6 shadow-md rounded-lg hover:bg-gray-200 transition">
+            <div class="text-center">
+                <h3 class="font-semibold text-lg">Wix Website 2</h3>
+                <p class="mt-2 text-gray-600">Description of the project goes here.</p>
+            </div>
+        </a>
+
+        <!-- Card 3 - Link to a live Wix website -->
+        <a href="https://your-wix-website-3.com" target="_blank" class="bg-white p-6 shadow-md rounded-lg hover:bg-gray-200 transition">
+            <div class="text-center">
+                <h3 class="font-semibold text-lg">Wix Website 3</h3>
+                <p class="mt-2 text-gray-600">Description of the project goes here.</p>
+            </div>
+        </a>
+    </div>
+</section>
+
     
     <section id="skills" class="py-16 text-center">
         <h2 class="text-3xl font-semibold mb-6">Skills</h2>
