--- a/jjjjj.html
+++ b/jjjjj.html
@@ -23,33 +23,34 @@
     </section>
     
     <section id="work" class="py-16 text-center">
-        <h2 class="text-3xl font-semibold mb-6">Previous Work</h2>
-        <div class="flex justify-center space-x-4">
-        <!-- Card 1 - Link to a live Wix website -->
-        <a href="https://net4gmur.wixsite.com/herbingtonhigh" target="_blank" class="bg-white p-6 shadow-md rounded-lg hover:bg-gray-200 transition">
-            <div class="text-center">
-                <h3 class="font-semibold text-lg">Wix Website 1</h3>
-                <p class="mt-2 text-gray-600">Description of the project goes here.</p>
+    <h2 class="text-3xl font-semibold mb-6">Previous Work</h2>
+    <div class="flex justify-center space-x-4">
+        <!-- Card 1 - Embed a live Wix website -->
+        <div class="bg-white p-6 shadow-md rounded-lg w-80">
+            <h3 class="font-semibold text-lg text-center">Wix Website 1</h3>
+            <div class="mt-4">
+                <iframe src="https://net4gmur.wixsite.com/herbingtonhigh" class="w-full h-48 rounded-lg" title="Wix Website 1"></iframe>
             </div>
-        </a>
+        </div>
 
-        <!-- Card 2 - Link to a live Wix website -->
-        <a href="https://net4gmur.wixsite.com/herbington-high-scho" target="_blank" class="bg-white p-6 shadow-md rounded-lg hover:bg-gray-200 transition">
-            <div class="text-center">
-                <h3 class="font-semibold text-lg">Wix Website 2</h3>
-                <p class="mt-2 text-gray-600">Description of the project goes here.</p>
+        <!-- Card 2 - Embed a live Wix website -->
+        <div class="bg-white p-6 shadow-md rounded-lg w-80">
+            <h3 class="font-semibold text-lg text-center">Wix Website 2</h3>
+            <div class="mt-4">
+                <iframe src="https://net4gmur.wixsite.com/herbington-high-scho" class="w-full h-48 rounded-lg" title="Wix Website 2"></iframe>
             </div>
-        </a>
+        </div>
 
-        <!-- Card 3 - Link to a live Wix website -->
-        <a href="https://net4gmur.wixsite.com/s-bakery" target="_blank" class="bg-white p-6 shadow-md rounded-lg hover:bg-gray-200 transition">
-            <div class="text-center">
-                <h3 class="font-semibold text-lg">Wix Website 3</h3>
-                <p class="mt-2 text-gray-600">Description of the project goes here.</p>
+        <!-- Card 3 - Embed a live Wix website -->
+        <div class="bg-white p-6 shadow-md rounded-lg w-80">
+            <h3 class="font-semibold text-lg text-center">Wix Website 3</h3>
+            <div class="mt-4">
+                <iframe src="https://net4gmur.wixsite.com/s-bakery" class="w-full h-48 rounded-lg" title="Wix Website 3"></iframe>
             </div>
-        </a>
+        </div>
     </div>
 </section>
+
 
     
     <section id="skills" class="py-16 text-center">
