--- a/jjjjj.html
+++ b/jjjjj.html
@@ -6,7 +6,7 @@
     <title>Developer Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-700 text-white-900">
+<body class="bg-gradient-to-r from-red-300 to-red-900 text-white">
     <nav class="bg-gray-800 p-4 text-center">
         <ul class="flex justify-center space-x-6">
             <li><a href="#hero" class="text-white hover:text-gray-300">Home</a></li>
@@ -17,14 +17,14 @@
     </nav>
     
     <section id="hero" class="text-center py-20 bg-gradient-to-r from-red-300 to-red-900 text-white">
-        <h1 class="text-4xl font-bold">Hi, I'm [Your Name]</h1>
+        <h1 class="text-4xl font-bold">Hi, I'm Nicholai Thomas</h1>
         <p class="text-lg mt-2">Software Developer | Web3 Enthusiast | IT Consultant</p>
         <a href="#contact" class="inline-block mt-4 px-6 py-2 bg-white text-red-500 rounded-lg shadow-md">Get in Touch</a>
     </section>
     
     <section id="work" class="py-16 text-center" href="https://net4gmur.wixsite.com/herbingtonhigh">
     <h2 class="text-3xl font-semibold mb-6">Previous Work</h2>
-    <div class="flex justify-center space-x-4">
+    <div class="flex justify-center space-x-6">
         <!-- Card 1 - Embed a live Wix website -->
         <div class="bg-white p-6 shadow-md rounded-lg w-80">
             <h3 class="font-semibold text-lg text-center">Wix Website 1</h3>
