--- a/jjjjj.html
+++ b/jjjjj.html
@@ -6,20 +6,25 @@
     <title>Developer Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-r from-red-300 to-red-900 text-white">
-    <nav class="bg-gray-800 p-4 text-center">
-        <ul class="flex justify-center space-x-6">
-            <li><a href="#hero" class="text-white hover:text-gray-300">Home</a></li>
-            <li><a href="#work" class="text-white hover:text-gray-300">Work</a></li>
-            <li><a href="#skills" class="text-white hover:text-gray-300">Skills</a></li>
-            <li><a href="#contact" class="text-white hover:text-gray-300">Contact</a></li>
+<body class="bg-grey-600 text-white">
+    <nav class="bg-gray-800 font-extrabold p-4 text-center">
+        <ul class="flex justify-right space-x-6">
+            <li><a href="#hero" class="text-white hover:text-gray-300">HOME</a></li>
+            <li><a href="#work" class="text-white hover:text-gray-300">WORK</a></li>
+            <li><a href="#skills" class="text-white hover:text-gray-300">RESUME</a></li>
+            <li><a href="#contact" class="text-white hover:text-gray-300">CONTACT</a></li>
         </ul>
     </nav>
     
-    <section id="hero" class="text-center py-20 bg-gradient-to-r from-red-300 to-red-900 text-white">
-        <h1 class="text-4xl font-bold">Hi, I'm Nicholai Thomas</h1>
-        <p class="text-lg mt-2">Software Developer | Web3 Enthusiast | IT Consultant</p>
-        <a href="#contact" class="inline-block mt-4 px-6 py-2 bg-white text-red-500 rounded-lg shadow-md">Get in Touch</a>
+    <section id="hero" class="text-left py-20 bg-gray-600 text-white">
+        <div class="flex justify-left">
+            <h1 class="text-4xl font-bold">Hi, I'm Nicholai Thomas</h1>
+            <p class="text-lg mt-2">Software Developer | Web3 Enthusiast | IT Consultant</p>
+            <a href="#contact" class="inline-block mt-4 px-6 py-2 bg-white text-red-500 rounded-lg shadow-md">Get in Touch</a>
+        </div>
+        <div class="shadow-md rounded-lg w-80">
+            <a href="#"></a>
+        </div>
     </section>
     
     <section id="work" class="py-16 text-center" href="https://net4gmur.wixsite.com/herbingtonhigh">
