--- a/jjjjj.html
+++ b/jjjjj.html
@@ -6,9 +6,9 @@
     <title>Developer Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-grey-600 text-white">
-    <nav class="bg-gray-800 font-extrabold p-4 text-center">
-        <ul class="flex justify-right space-x-6">
+<body class="bg-gray-900 text-white">
+    <nav class="bg-black font-extrabold p-4 text-center">
+        <ul class="flex justify-left space-x-6">
             <li><a href="#hero" class="text-white hover:text-gray-300">HOME</a></li>
             <li><a href="#work" class="text-white hover:text-gray-300">WORK</a></li>
             <li><a href="#skills" class="text-white hover:text-gray-300">RESUME</a></li>
@@ -16,18 +16,19 @@
         </ul>
     </nav>
     
-    <section id="hero" class="text-left py-20 bg-gray-600 text-white">
-        <div class="flex justify-left">
+    <section id="hero" class=" py-20 bg-gray-600 text-white">
+        <div class="flex justify-items-start">
             <h1 class="text-4xl font-bold">Hi, I'm Nicholai Thomas</h1>
+            <p class="text-3x1" font-light>As a passionate software developer, I specialize in creating innovative and efficient solutions to meet a variety of technological needs. With a strong background in programming languages such as JavaScript, Python, and Java, I focus on writing clean, scalable code that drives user-centric experiences.</p>
             <p class="text-lg mt-2">Software Developer | Web3 Enthusiast | IT Consultant</p>
-            <a href="#contact" class="inline-block mt-4 px-6 py-2 bg-white text-red-500 rounded-lg shadow-md">Get in Touch</a>
+            <a href="#contact" class="inline-block mt-4 px-6 py-2 bg-red-800 text-white rounded-lg shadow-md">Get in Touch</a>
         </div>
-        <div class="shadow-md rounded-lg w-80">
+        <div class="bg-white justify-items-center shadow-md rounded-lg w-80">
             <a href="#"></a>
         </div>
     </section>
     
-    <section id="work" class="py-16 text-center" href="https://net4gmur.wixsite.com/herbingtonhigh">
+    <section id="work" class="py-16 text-center" bg-gray-900 href="https://net4gmur.wixsite.com/herbingtonhigh">
     <h2 class="text-3xl font-semibold mb-6">Previous Work</h2>
     <div class="flex justify-center space-x-6">
         <!-- Card 1 - Embed a live Wix website -->
