--- a/jjjjj.html
+++ b/jjjjj.html
@@ -6,7 +6,7 @@
     <title>Developer Resume</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-900 text-white">
+<body class="bg-black-800 text-white">
     <nav class="bg-black font-extrabold p-4 text-center">
         <ul class="flex justify-left space-x-6">
             <li><a href="#hero" class="text-white hover:text-gray-300">HOME</a></li>
@@ -16,8 +16,8 @@
         </ul>
     </nav>
     
-    <section id="hero" class=" py-20 bg-gray-600 text-white">
-        <div class="flex justify-items-start">
+    <section id="hero" class=" grid grid-cols-2 gap-4 py-20 bg-gray-600 text-white">
+        <div class="flex content-between gap-2">
             <h1 class="text-4xl font-bold">Hi, I'm Nicholai Thomas</h1>
             <p class="text-3x1" font-light>As a passionate software developer, I specialize in creating innovative and efficient solutions to meet a variety of technological needs. With a strong background in programming languages such as JavaScript, Python, and Java, I focus on writing clean, scalable code that drives user-centric experiences.</p>
             <p class="text-lg mt-2">Software Developer | Web3 Enthusiast | IT Consultant</p>
