--- a/jjjjj.html
+++ b/jjjjj.html
@@ -32,7 +32,7 @@
         <!-- Profile Image with Animation & Gradient Border -->
         <div class="w-1/2 flex justify-center animate-fadeInLeft">
             <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
-                <img src="profile.jpg" alt="Nicholai Thomas" class="rounded-full w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
+                <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Nicholai Thomas" class="rounded-full w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
             </div>
         </div>
 
@@ -89,7 +89,22 @@
 <!-- FontAwesome Icons -->
 <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
 
-    
+    <section id="about" class="relative bg-gradient-to-b from-black/60 to-black/80 text-white">
+         <div class="w-1/2 text-left animate-slideInLeft">
+            <h1 class="text-5xl font-bold text-red-500 drop-shadow-lg">
+                <span class="flex items-center"><i class="fas fa-arrow text-red-500"></i> 💻 About Me</span><span class="text-white">WHO AM I??</span>
+            </h1>
+            <p class="mt-4 text-lg font-light text-white opacity-0 animate-fadeIn">
+                Hi there! I'm Nicholai Thomas, a passionate and results-driven software developer with a strong foundation in both front-end and back-end technologies. With 3 years of experience in the tech industry, I specialize in building user-friendly, scalable applications and solutions that not only meet the needs of my clients but exceed their expectations.
+                I have a deep interest in UI/UX design, and I am always exploring new technologies to keep up with the ever-evolving landscape of software development. Whether it's creating responsive websites, optimizing back-end infrastructure, or developing robust APIs, I bring creativity and technical expertise to every project I work on.
+            </p>
+         </div>
+        <div class="w-1/2 flex justify-center animate-fadeInRight">
+            <div class="rounded-t-sm p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
+                <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Nicholai Thomas" class="rounded-t-sm w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
+            </div>
+        </div>
+    </section>
     <footer id="contact" class="py-16 bg-gray-700 text-center">
         <h2 class="text-3xl font-semibold">Contact Me</h2>
         <form id="contact-form" class="flex flex-col items-center space-y-4 mt-4">
