--- a/jjjjj.html
+++ b/jjjjj.html
@@ -89,22 +89,74 @@
 <!-- FontAwesome Icons -->
 <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
 
-    <section id="about" class="relative bg-gradient-to-b from-black/60 to-black/80 text-white">
-         <div class="w-1/2 text-left animate-slideInLeft">
-            <h1 class="text-5xl font-bold text-red-500 drop-shadow-lg">
-                <span class="flex items-center"><i class="fas fa-arrow text-red-500"></i> 💻 About Me</span><span class="text-white">WHO AM I??</span>
+<section id="about" class="relative bg-gradient-to-b from-black/60 to-black/80 text-white py-16">
+    <div class="container mx-auto flex flex-wrap items-center justify-between px-8">
+        <!-- Left: About Text -->
+        <div class="w-full md:w-1/2 animate-slideInLeft">
+            <h1 class="text-5xl font-bold text-red-500 drop-shadow-lg flex items-center space-x-3">
+                <i class="fas fa-user text-red-500"></i>
+                <span>About Me</span>
             </h1>
+            <h2 class="text-3xl font-semibold text-white mt-2">WHO AM I??</h2>
+
             <p class="mt-4 text-lg font-light text-white opacity-0 animate-fadeIn">
-                Hi there! I'm Nicholai Thomas, a passionate and results-driven software developer with a strong foundation in both front-end and back-end technologies. With 3 years of experience in the tech industry, I specialize in building user-friendly, scalable applications and solutions that not only meet the needs of my clients but exceed their expectations.
-                I have a deep interest in UI/UX design, and I am always exploring new technologies to keep up with the ever-evolving landscape of software development. Whether it's creating responsive websites, optimizing back-end infrastructure, or developing robust APIs, I bring creativity and technical expertise to every project I work on.
+                Hi there! I'm Nicholai Thomas, a passionate and results-driven software developer with a strong foundation in both front-end and back-end technologies.I have also operated in the capacity of Information Systems Support Associate for over a year in which I have worked with over 100 companies, as such I have key understanding of IT systems concepts and structure. <br><br> 
+                With **3 years of experience**, I specialize in building user-friendly, scalable applications that exceed expectations.
+                <br><br>
+                I have a deep interest in **UI/UX design** and continuously explore new technologies to stay ahead in the evolving tech world. From crafting **responsive websites** to **developing APIs** and optimizing **back-end infrastructures**, I bring creativity and expertise to every project.
             </p>
-         </div>
-        <div class="w-1/2 flex justify-center animate-fadeInRight">
-            <div class="rounded-t-sm p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
-                <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Nicholai Thomas" class="rounded-t-sm w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
+
+            <!-- Skills Cards -->
+            <div class="mt-6 grid grid-cols-2 gap-4">
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                    <i class="fas fa-code text-red-500 text-2xl"></i>
+                    <span class="text-white">Full-Stack Development</span>
+                </div>
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                    <i class="fas fa-paint-brush text-red-500 text-2xl"></i>
+                    <span class="text-white">UI/UX Design</span>
+                </div>
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                    <i class="fas fa-database text-red-500 text-2xl"></i>
+                    <span class="text-white">Server Management</span>
+                </div>
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                    <i class="fas fa-network-wired text-red-500 text-2xl"></i>
+                    <span class="text-white">Networking & Security</span>
+                </div>
             </div>
         </div>
-    </section>
+
+        <!-- Right: Profile Image -->
+        <div class="w-full md:w-1/2 flex justify-center md:justify-end animate-fadeInRight mt-8 md:mt-0">
+            <div class="rounded-xl p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
+                <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Nicholai Thomas"
+                    class="rounded-xl w-64 h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Animations -->
+<style>
+    @keyframes fadeInLeft {
+        from { opacity: 0; transform: translateX(-50px); }
+        to { opacity: 1; transform: translateX(0); }
+    }
+
+    @keyframes fadeInRight {
+        from { opacity: 0; transform: translateX(50px); }
+        to { opacity: 1; transform: translateX(0); }
+    }
+
+    .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
+    .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
+    .animate-fadeIn { animation: fadeIn 1.5s ease-in-out forwards; }
+</style>
+
+<!-- FontAwesome Icons -->
+<script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
+
     <footer id="contact" class="py-16 bg-gray-700 text-center">
         <h2 class="text-3xl font-semibold">Contact Me</h2>
         <form id="contact-form" class="flex flex-col items-center space-y-4 mt-4">
