--- a/jjjjj.html
+++ b/jjjjj.html
@@ -89,8 +89,10 @@
 <!-- FontAwesome Icons -->
 <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
 
-<section id="about" class="relative bg-gradient-to-b from-black/60 to-black/80 text-white py-16">
-    <div class="container mx-auto flex flex-wrap items-center justify-between px-8">
+<section id="about" class="relative bg-gradient-to-b from-black/80 to-black/90 text-white py-16">
+    <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/dark-mesh.png')] opacity-10"></div> 
+
+    <div class="container mx-auto flex flex-wrap items-center justify-between px-8 relative z-10">
         <!-- Left: About Text -->
         <div class="w-full md:w-1/2 animate-slideInLeft">
             <h1 class="text-5xl font-bold text-red-500 drop-shadow-lg flex items-center space-x-3">
@@ -100,30 +102,38 @@
             <h2 class="text-3xl font-semibold text-white mt-2">WHO AM I??</h2>
 
             <p class="mt-4 text-lg font-light text-white opacity-0 animate-fadeIn">
-                Hi there! I'm Nicholai Thomas, a passionate and results-driven software developer with a strong foundation in both front-end and back-end technologies.I have also operated in the capacity of Information Systems Support Associate for over a year in which I have worked with over 100 companies, as such I have key understanding of IT systems concepts and structure. <br><br> 
-                With **3 years of experience**, I specialize in building user-friendly, scalable applications that exceed expectations.
+                Hi there! I'm <span class="font-bold text-white">Nicholai Thomas</span>, a passionate and results-driven software developer with a strong foundation in both front-end and back-end technologies. With **3 years of experience**, I specialize in building user-friendly, scalable applications that exceed expectations.
                 <br><br>
                 I have a deep interest in **UI/UX design** and continuously explore new technologies to stay ahead in the evolving tech world. From crafting **responsive websites** to **developing APIs** and optimizing **back-end infrastructures**, I bring creativity and expertise to every project.
+                <br><br>
+                I have also acted in the capacity of Information Sysytems Support Associate for the past year in which i was instrumental for over 100 companies in creating,maintaning and developing their diffrent IT systems.
             </p>
 
             <!-- Skills Cards -->
             <div class="mt-6 grid grid-cols-2 gap-4">
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
                     <i class="fas fa-code text-red-500 text-2xl"></i>
                     <span class="text-white">Full-Stack Development</span>
                 </div>
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
                     <i class="fas fa-paint-brush text-red-500 text-2xl"></i>
                     <span class="text-white">UI/UX Design</span>
                 </div>
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
                     <i class="fas fa-database text-red-500 text-2xl"></i>
                     <span class="text-white">Server Management</span>
                 </div>
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3">
+                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
                     <i class="fas fa-network-wired text-red-500 text-2xl"></i>
                     <span class="text-white">Networking & Security</span>
                 </div>
+            </div>
+
+            <!-- Contact Button -->
+            <div class="mt-6">
+                <a href="#contact" class="inline-block px-6 py-3 text-white bg-red-600 rounded-lg font-semibold text-lg shadow-md transition transform hover:scale-110 hover:bg-red-700">
+                    Contact Me
+                </a>
             </div>
         </div>
 
