--- a/jjjjj.html
+++ b/jjjjj.html
@@ -109,26 +109,31 @@
                 I have also acted in the capacity of Information Sysytems Support Associate for the past year in which i was instrumental for over 100 companies in creating,maintaning and developing their diffrent IT systems.
             </p>
 
-            <!-- Skills Cards -->
-            <div class="mt-6 grid grid-cols-2 gap-4">
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
-                    <i class="fas fa-code text-red-500 text-2xl"></i>
-                    <span class="text-white">Full-Stack Development</span>
-                </div>
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
-                    <i class="fas fa-paint-brush text-red-500 text-2xl"></i>
-                    <span class="text-white">UI/UX Design</span>
-                </div>
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
-                    <i class="fas fa-database text-red-500 text-2xl"></i>
-                    <span class="text-white">Server Management</span>
-                </div>
-                <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
-                    <i class="fas fa-network-wired text-red-500 text-2xl"></i>
-                    <span class="text-white">Networking & Security</span>
+            <!-- Skills Card Container -->
+            <div class="mt-6 bg-gray-900 p-6 rounded-lg shadow-lg border border-gray-700">
+                <h3 class="text-2xl font-semibold text-white mb-4 flex items-center space-x-2">
+                    <i class="fas fa-tools text-red-500"></i>
+                    <span>My Skills</span>
+                </h3>
+                <div class="grid grid-cols-2 gap-4">
+                    <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
+                        <i class="fas fa-laptop-code text-red-500 text-2xl"></i>
+                        <span class="text-white">💻 Full-Stack Development</span>
+                    </div>
+                    <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
+                        <i class="fas fa-palette text-red-500 text-2xl"></i>
+                        <span class="text-white">💻 UI/UX Design</span>
+                    </div>
+                    <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
+                        <i class="fas fa-server text-red-500 text-2xl"></i>
+                        <span class="text-white">🛠️ Database Management</span>
+                    </div>
+                    <div class="p-4 bg-gray-800 rounded-lg shadow-md flex items-center space-x-3 transition transform hover:scale-105 hover:shadow-red-500">
+                        <i class="fas fa-shield-alt text-red-500 text-2xl"></i>
+                        <span class="text-white">🛠️ Networking & Security</span>
+                    </div>
                 </div>
             </div>
-
             <!-- Contact Button -->
             <div class="mt-6">
                 <a href="#contact" class="inline-block px-6 py-3 text-white bg-red-600 rounded-lg font-semibold text-lg shadow-md transition transform hover:scale-110 hover:bg-red-700">
