--- a/jjjjj.html
+++ b/jjjjj.html
@@ -89,7 +89,7 @@
 <!-- FontAwesome Icons -->
 <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
 
-<section id="about" class="relative bg-gradient-to-b from-black/80 to-black/90 text-white py-16">
+<section id="about" class="relative bg-gradient-to-r from-black/60 to-black/80 text-white py-16">
     <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/dark-mesh.png')] opacity-10"></div> 
 
     <div class="container mx-auto flex flex-wrap items-center justify-between px-8 relative z-10">
@@ -104,7 +104,7 @@
             <p class="mt-4 text-lg font-light text-white opacity-0 animate-fadeIn">
                 Hi there! I'm <span class="font-bold text-white">Nicholai Thomas</span>, a passionate and results-driven software developer with a strong foundation in both front-end and back-end technologies. With **3 years of experience**, I specialize in building user-friendly, scalable applications that exceed expectations.
                 <br><br>
-                I have a deep interest in **UI/UX design** and continuously explore new technologies to stay ahead in the evolving tech world. From crafting **responsive websites** to **developing APIs** and optimizing **back-end infrastructures**, I bring creativity and expertise to every project.
+                <!---I have a deep interest in **UI/UX design** and continuously explore new technologies to stay ahead in the evolving tech world. From crafting **responsive websites** to **developing APIs** and optimizing **back-end infrastructures**, I bring creativity and expertise to every project.
                 <br><br>
                 I have also acted in the capacity of Information Sysytems Support Associate for the past year in which i was instrumental for over 100 companies in creating,maintaning and developing their diffrent IT systems.
             </p>
@@ -167,6 +167,150 @@
     .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
     .animate-fadeIn { animation: fadeIn 1.5s ease-in-out forwards; }
+</style>
+
+<!-- FontAwesome Icons -->
+<script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
+
+    <section id="resume" class="relative bg-black text-white py-16">
+    <div class="container mx-auto flex flex-wrap items-start justify-between px-8">
+
+        <!-- Left Container (Profile & Contact) -->
+        <div class="w-full md:w-1/3 bg-black/60 p-6 rounded-lg shadow-lg animate-slideInLeft">
+            <!-- Profile Photo -->
+            <div class="flex flex-col items-center">
+                <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
+                    <img src="https://i.pinimg.com/736x/70/93/41/7093410fb9928903103ecad18f6bf3e5.jpg" alt="Profile Photo"
+                        class="rounded-full w-40 h-40 border-4 border-transparent hover:border-red-500 transition duration-500">
+                </div>
+                <h2 class="text-3xl font-bold mt-4">Nicholai Thomas</h2>
+                <p class="text-lg text-gray-300">Software Developer</p>
+            </div>
+
+            <!-- Contact Card -->
+            <div class="mt-6 bg-gray-800 p-4 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold text-red-500 flex items-center space-x-2">
+                    <i class="fas fa-address-card"></i>
+                    <span>Contact Info</span>
+                </h3>
+                <div class="mt-3 space-y-2">
+                    <p class="flex items-center space-x-3"><i class="fas fa-envelope text-red-500"></i> <span>nicholai@email.com</span></p>
+                    <p class="flex items-center space-x-3"><i class="fas fa-phone text-red-500"></i> <span>(123) 456-7890</span></p>
+                    <p class="flex items-center space-x-3"><i class="fas fa-map-marker-alt text-red-500"></i> <span>New York, USA</span></p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Right Container (Resume Timeline) -->
+        <div class="w-full md:w-2/3 bg-black/60 p-6 rounded-lg shadow-lg animate-fadeInRight">
+            <h2 class="text-3xl font-bold text-red-500 flex items-center space-x-3">
+                <i class="fas fa-file-alt"></i>
+                <span>Resume</span>
+            </h2>
+
+            <div class="grid grid-cols-2 gap-6 mt-4">
+                <!-- Left Side: Objectives & Experience -->
+                <div>
+                    <h3 class="text-xl font-semibold text-white flex items-center space-x-2">
+                        <i class="fas fa-bullseye text-red-500"></i>
+                        <span>Objective</span>
+                    </h3>
+                    <p class="mt-2 text-gray-300 text-sm">
+                        Passionate developer with 3 years of experience in full-stack development. Seeking to create impactful applications while contributing to innovative teams.
+                    </p>
+
+                    <h3 class="mt-6 text-xl font-semibold text-white flex items-center space-x-2">
+                        <i class="fas fa-briefcase text-red-500"></i>
+                        <span>Work Experience</span>
+                    </h3>
+                    <ul class="mt-2 space-y-4 text-sm">
+                        <li>
+                            <p class="font-bold">Software Developer | TechCorp</p>
+                            <p class="text-gray-400">2022 - Present</p>
+                            <p class="text-gray-300">Developed scalable applications and optimized front-end UI.</p>
+                        </li>
+                        <li>
+                            <p class="font-bold">Junior Developer | WebSolutions</p>
+                            <p class="text-gray-400">2020 - 2022</p>
+                            <p class="text-gray-300">Assisted in full-stack web development projects.</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Right Side: Languages & Skills -->
+                <div>
+                    <h3 class="text-xl font-semibold text-white flex items-center space-x-2">
+                        <i class="fas fa-language text-red-500"></i>
+                        <span>Languages</span>
+                    </h3>
+                    <ul class="mt-2 space-y-2 text-sm">
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-check-circle text-red-500"></i>
+                            <span>English (Fluent)</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-check-circle text-red-500"></i>
+                            <span>Spanish (Intermediate)</span>
+                        </li>
+                    </ul>
+
+                    <h3 class="mt-6 text-xl font-semibold text-white flex items-center space-x-2">
+                        <i class="fas fa-brain text-red-500"></i>
+                        <span>Soft Skills</span>
+                    </h3>
+                    <ul class="mt-2 space-y-2 text-sm">
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-check-circle text-red-500"></i>
+                            <span>Problem-Solving</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-check-circle text-red-500"></i>
+                            <span>Communication</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-check-circle text-red-500"></i>
+                            <span>Teamwork</span>
+                        </li>
+                    </ul>
+
+                    <h3 class="mt-6 text-xl font-semibold text-white flex items-center space-x-2">
+                        <i class="fas fa-cogs text-red-500"></i>
+                        <span>Technical Skills</span>
+                    </h3>
+                    <ul class="mt-2 space-y-2 text-sm">
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-code text-red-500"></i>
+                            <span>JavaScript, React, Next.js</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-server text-red-500"></i>
+                            <span>Node.js, Express.js</span>
+                        </li>
+                        <li class="flex items-center space-x-2">
+                            <i class="fas fa-database text-red-500"></i>
+                            <span>MongoDB, PostgreSQL</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Animations -->
+<style>
+    @keyframes fadeInLeft {
+        from { opacity: 0; transform: translateX(-50px); }
+        to { opacity: 1; transform: translateX(0); }
+    }
+
+    @keyframes fadeInRight {
+        from { opacity: 0; transform: translateX(50px); }
+        to { opacity: 1; transform: translateX(0); }
+    }
+
+    .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
+    .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
 
 <!-- FontAwesome Icons -->
