--- a/jjjjj.html
+++ b/jjjjj.html
@@ -11,7 +11,7 @@
     <nav class="bg-black p-4 flex items-center justify-between">
         <!-- Logo -->
         <div class="flex items-center">
-            <img src="logo.png" alt="Logo" class="h-10"> <!-- Replace with your logo -->
+            <img src="https://i.pinimg.com/736x/62/3b/6f/623b6f2d8b223186afd225defabea0c8.jpg" alt="Logo" class="h-10"> <!-- Replace with your logo -->
         </div>
     
         <!-- Navbar Links -->
@@ -166,7 +166,7 @@
     .animate-fadeIn { animation: fadeIn 1.5s ease-in-out forwards; }
 </style>
 
-    <section id="resume" class="relative bg-black text-white py-16">
+    <section id="resume" class="relative bg-gradient-to-r from-gray-900 to-black-white py-16">
     <div class="container mx-auto flex flex-wrap items-start justify-between px-8">
 
         <!-- Left Container (Profile & Contact) -->
@@ -182,7 +182,7 @@
             </div>
 
             <!-- Contact Card -->
-            <div class="mt-6 bg-gray-100 p-4 rounded-lg shadow-md">
+            <div class="mt-6 bg-black/60 p-4 rounded-lg shadow-md">
                 <h3 class="text-xl font-semibold text-red-500 flex items-center space-x-2">
                     <i class="fas fa-address-card"></i>
                     <span>Contact Info</span>
@@ -219,13 +219,13 @@
                     </h3>
                     <ul class="mt-2 space-y-4 text-sm">
                         <li>
-                            <p class="font-bold">Software Developer | TechCorp</p>
-                            <p class="text-gray-400">2022 - Present</p>
-                            <p class="text-gray-300">Developed scalable applications and optimized front-end UI.</p>
+                            <p class="font-bold">Information Systems Support Associate | Modtech Information Systems & Peripherals</p>
+                            <p class="text-gray-400">2024 - Present</p>
+                            <p class="text-gray-300">Provide professional IT needs across multiple companies.</p>
                         </li>
                         <li>
-                            <p class="font-bold">Junior Developer | WebSolutions</p>
-                            <p class="text-gray-400">2020 - 2022</p>
+                            <p class="font-bold">Junior Developer | Dacrew Quality Productions</p>
+                            <p class="text-gray-400">2022 - 2023</p>
                             <p class="text-gray-300">Assisted in full-stack web development projects.</p>
                         </li>
                     </ul>
@@ -244,7 +244,7 @@
                         </li>
                         <li class="flex items-center space-x-2">
                             <i class="fas fa-check-circle text-red-500"></i>
-                            <span>Spanish (Intermediate)</span>
+                            <span>Spanish (Beginner)</span>
                         </li>
                     </ul>
 
@@ -282,7 +282,7 @@
                         </li>
                         <li class="flex items-center space-x-2">
                             <i class="fas fa-database text-red-500"></i>
-                            <span>MongoDB, PostgreSQL</span>
+                            <span>Cisco, Python</span>
                         </li>
                     </ul>
                 </div>
