--- a/jjjjj.html
+++ b/jjjjj.html
@@ -47,7 +47,7 @@
 
             <!-- Icons for Roles -->
             <div class="mt-4 text-lg text-gray-300 flex justify-end space-x-4 opacity-0 animate-fadeIn delay-500">
-                <span class="flex items-center"><i class="fas fa-laptop-code text-red-500"></i> 💻 Software Developer</span>
+                <span class="flex items-center"><i class="text-red-500" src="https://cdn-icons-png.flaticon.com/128/2010/2010990.png"></i> Software Developer</span>
                 <span class="flex items-center"><i class="fas fa-globe text-red-500"></i> 🌐 Web3 Enthusiast</span>
                 <span class="flex items-center"><i class="fas fa-tools text-red-500"></i> 🛠️ IT Consultant</span>
             </div>
