--- a/jjjjj.html
+++ b/jjjjj.html
@@ -318,7 +318,7 @@
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
 <section id="contact" class="bg-gradient-to-r from-black/90 to-black flex items-center mx-auto">
-    <form class="bg-black/30 size-40 max-w-full my-32 px-4 mx-auto space-y-6 border-outline-white">
+    <form class="bg-black/30 size-half max-w-full my-32 px-4 mx-auto space-y-6 border-outline-white">
         <div>
             <h1 class="text-white-3xl font-bold mt-4">
                 Let's hear from you!
