--- a/jjjjj.html
+++ b/jjjjj.html
@@ -317,7 +317,7 @@
     .animate-slideInLeft { animation: fadeInLeft 1.5s ease-in-out; }
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
-<section id="contact" class="bg-gradient-to-r from-black/90 to-black mx-auto">
+<section id="contact" class="bg-gradient-to-r from-black/90 to-black flex items-center mx-auto">
     <form class="bg-black/30 size-1/2 max-w-full my-32 px-4 mx-auto space-y-6 border-outline-white">
         <div class="flex-text-center">
             <h1 class="text-white-lg font-bold mt-4 drop-shadow-lg animate-slidein-right">
