--- a/jjjjj.html
+++ b/jjjjj.html
@@ -179,7 +179,7 @@
                         class="rounded-full w-40 h-40 border-4 border-transparent hover:border-red-500 transition duration-500">
                 </div>
                 <h2 class="text-3xl font-bold mt-4">Nicholai Thomas</h2>
-                <p class="text-lg text-black/20">Software Developer</p>
+                <p class="text-lg text-red-900">Software Developer</p>
             </div>
 
             <!-- Contact Card -->
@@ -194,8 +194,8 @@
                     <p class="flex items-center space-x-3 text-black"><i class="fas fa-map-marker-alt text-red-500"></i> <span>Kingston, JA</span></p>
                 </div>
             </div>
-            <h1></h1>
-            <h1></h1>
+            <br></br>
+            <br></br>
         </div>
 
         <!-- Right Container (Resume Timeline) -->
@@ -320,12 +320,13 @@
     .animate-fadeInRight { animation: fadeInRight 1.5s ease-in-out; }
 </style>
 <section id="contact" class="bg-gradient-to-r from-black/80 to-black/90 flex items-center mx-auto">
-
-    <h1 class="text-white-lg font-bold mt-4 drop-shadow-lg animate-slidein-right size-1/4 object-center">
-        Let's hear from you!
-    </h1>
     
     <form class="bg-black/30 size-1/2 max-w-3xl my-32 px-4 mx-auto space-y-6 border-outline-white">
+        <div>
+            <h1 class="text-white-lg font-bold mt-4 drop-shadow-lg animate-slidein-right size-1/4 object-center">
+                Let's hear from you!
+            </h1>
+        </div>
         
         <div>
             <input type="text" name="First" placeholder="First Name" autocomplet="on" required class="bg-white text-sm-black border-white block py-2 px-4 rounded focus-outline-none foucus-border-red w-full">
