--- a/jjjjj.html
+++ b/jjjjj.html
@@ -195,7 +195,6 @@
                 </div>
             </div>
             <br></br>
-            <br></br>
         </div>
 
         <!-- Right Container (Resume Timeline) -->
@@ -322,7 +321,7 @@
 <section id="contact" class="bg-gradient-to-r from-black/80 to-black/90 flex items-center mx-auto">
     
     <form class="bg-black/30 size-1/2 max-w-3xl my-32 px-4 mx-auto space-y-6 border-outline-white">
-        <div>
+        <div class="object-center-top">
             <h1 class="text-white-lg font-bold mt-4 drop-shadow-lg animate-slidein-right size-1/4 object-center">
                 Let's hear from you!
             </h1>
