--- a/jjjjj.html
+++ b/jjjjj.html
@@ -12,7 +12,7 @@
     <nav class="bg-black p-4 flex items-center justify-between">
         <!-- Logo -->
         <div class="flex items-center">
-            <img src="https://i.pinimg.com/736x/62/3b/6f/623b6f2d8b223186afd225defabea0c8.jpg" alt="Logo" class="h-10 size-1/2"> <!-- Replace with your logo -->
+            <img src="https://i.pinimg.com/736x/e4/2f/b4/e42fb4c0bd89d5ddcf8e50af866e62e7.jpg" alt="Logo" class="h-10 size-1/2"> <!-- Replace with your logo -->
         </div>
     
         <!-- Navbar Links -->
@@ -345,5 +345,20 @@
         <button type="submit" class="bg-red-600 text-white px-6 py-3 rounded-lg shadow-md hover:bg-red-700 hover:shadow-red-500 transition duration-500 hover:shadow-lg size-1/4">SEND</button>
     </form>
 </section>
+
+<footer>
+   <nav class="bg-black p-4 flex items-center justify-between">
+        <!-- Logo -->
+        <div class="flex items-center">
+            <img src="https://i.pinimg.com/736x/e4/2f/b4/e42fb4c0bd89d5ddcf8e50af866e62e7.jpg" alt="Logo" class="h-10"> 
+        </div> 
+
+        <ul class="flex space-x-6">
+            <li><a href="#linkedin" class=" hover:text-red-500 transition"><i class="fas fa-brands fa-linkedin text-white hover:text-red-500 transition"></a></li>
+            <li><a href="#instagram" class=" hover:text-red-500 transition"><i class="fa-brands fa-square-instagram text-white hover:text-red-500 transition"></i></a></li>
+            <li><a href="#github" class="text-white hover:text-red-500 transition"><i class="fa-brands fa-github text-white hover:text-red-500 transition"></i></a></li>
+        </ul>
+   </nav>
+</footer>
 </body>
 </html>
