--- a/jjjjj.html
+++ b/jjjjj.html
@@ -346,8 +346,7 @@
     </form>
 </section>
 
-<footer>
-   <nav class="bg-black p-4 flex items-center justify-between">
+<footer class="bg-black p-4 flex items-center justify-between">
         <!-- Logo -->
         <div class="flex items-center">
             <img src="https://i.pinimg.com/736x/e4/2f/b4/e42fb4c0bd89d5ddcf8e50af866e62e7.jpg" alt="Logo" class="h-10"> 
@@ -358,7 +357,6 @@
             <li><a href="#instagram" class=" hover:text-red-500 transition"><i class="fa-brands fa-square-instagram text-white hover:text-red-500 transition"></i></a></li>
             <li><a href="#github" class="text-white hover:text-red-500 transition"><i class="fa-brands fa-github text-white hover:text-red-500 transition"></i></a></li>
         </ul>
-   </nav>
 </footer>
 </body>
 </html>
