--- a/jjjjj.html
+++ b/jjjjj.html
@@ -349,19 +349,20 @@
 <footer class="bg-black text-white py-6 relative shadow-lg">
   <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center">
     <!-- Logo --> 
-    <div class="text-2xl font-bold">Your Logo</div>
-      <img src="https://i.pinimg.com/736x/e4/2f/b4/e42fb4c0bd89d5ddcf8e50af866e62e7.jpg" alt="Logo" class="h-10 size-1/2">
+    <div class="text-2xl ">
+        <img src="https://i.pinimg.com/736x/e4/2f/b4/e42fb4c0bd89d5ddcf8e50af866e62e7.jpg" alt="Logo" class="h-10">
+    </div>
     
     <!-- Social Icons -->
     <div class="flex space-x-6 mt-4 md:mt-0">
       <a href="#" class="text-gray-400 hover:text-red transition duration-900">
-        <i class="fa-brands fa-linkedin text-2xl"></i>
+        <i class="fa-brands fa-linkedin text-2xl hover:text-red transition duration-900"></i>
       </a>
       <a href="#" class="text-gray-400 hover:text-red transition duration-900">
-        <i class="fa-brands fa-instagram text-2xl"></i>
+        <i class="fa-brands fa-instagram text-2xl hover:text-red transition duration-900"></i>
       </a>
       <a href="#" class="text-gray-400 hover:text-red transition duration-900">
-        <i class="fa-brands fa-github text-2xl"></i>
+        <i class="fa-brands fa-github text-2xl hover:text-red transition duration-900"></i>
       </a>
     </div>
   </div>
