--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
     <div class="absolute inset-0 bg-gradient-to-b from-black/60 to-black/80"></div>
 
     <div class="relative container mx-auto flex flex-col-reverse md:flex-row items-center justify-between px-4 sm:px-8">
+        <!-- Profile Image with Animation & Gradient Border -->
+        <div class="w-1/2 md:w-1/2 flex justify-center md:justify-start animate-fadeInLeft">
+            <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
+                <img src="https://i.pinimg.com/736x/6d/d9/3b/6dd93b69ac1c17ea3b5ce37a14adb150.jpg" 
+                     alt="Nicholai Thomas" 
+                     class="rounded-full w-40 h-40 sm:w-56 sm:h-56 md:w-64 md:h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
+            </div>
+        </div>
         <!-- Hero Text Content with Cinematic Animation -->
-        <div class="w-full md:w-1/2 text-center md:text-right animate-slideInRight">
+        <div class="w-full md:w-1/2 text-right md:text-right animate-slideInRight">
             <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-red-500 drop-shadow-lg">
                 Hi, I'm <span class="text-white">Nicholai Thomas</span>
             </h1>
@@ -70,15 +78,6 @@
                 <a href="#contact" class="bg-red-600 text-white px-5 py-3 rounded-lg shadow-md hover:bg-red-700 hover:shadow-red-500 transition duration-500 hover:shadow-lg">
                     Contact Me
                 </a>
-            </div>
-        </div>
-
-        <!-- Profile Image with Animation & Gradient Border -->
-        <div class="w-full md:w-1/2 flex justify-center md:justify-start animate-fadeInLeft">
-            <div class="rounded-full p-2 bg-gradient-to-br from-red-600 to-black shadow-lg">
-                <img src="https://i.pinimg.com/736x/6d/d9/3b/6dd93b69ac1c17ea3b5ce37a14adb150.jpg" 
-                     alt="Nicholai Thomas" 
-                     class="rounded-full w-40 h-40 sm:w-56 sm:h-56 md:w-64 md:h-64 border-4 border-transparent hover:border-red-500 transition duration-500">
             </div>
         </div>
     </div>
