--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 <body class="bg-gray-100 text-gray-800 font-sans transition-colors duration-500">
 
   <!-- Header -->
-  <header class="bg-white shadow-md">
+  <header class="shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-indigo-600 transition duration-300 hover:scale-105">My Blog</h1>
       <nav class="space-x-4">
@@ -50,7 +50,7 @@
       <div class="p-6">
         <h2 class="text-xl font-semibold mb-2 text-indigo-700 transition-colors duration-200 hover:text-indigo-900">My Digital Story</h2>
         <p class="text-gray-600 mb-4">A short description of the blog post goes here to entice users to read more.</p>
-        <a href="#" class="text-indigo-600 font-medium hover:underline">Read more →</a>
+        <a href="https://github.com/codEinstein-prog/codEinstein-prog-/blob/main/read-more.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
       </div>
     </article>
 
@@ -66,7 +66,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="bg-white mt-10 py-6 border-t">
+  <footer class="mt-10 py-6 border-t">
     <div class="max-w-7xl mx-auto px-4 text-center text-gray-500">
       &copy; 2025 My Blog. All rights reserved.
     </div>
@@ -75,15 +75,9 @@
   <!-- Dark Mode Toggle -->
   <script>
     const toggleDarkMode = () => {
-      document.header.classList.toggle('dark');
-      document.header.classList.toggle('bg-gray-900');
-      document.header.classList.toggle('text-white');
       document.body.classList.toggle('dark');
       document.body.classList.toggle('bg-gray-900');
       document.body.classList.toggle('text-white');
-      document.footer.classList('dark');
-      document.footer.classList('bg-gray-900');
-      document.footer.classList('text-white');
     };
   </script>
   <div class="fixed bottom-6 right-6">
