--- a/read-more.html
+++ b/read-more.html
@@ -21,23 +21,45 @@
   </header>
 
   <!-- Article -->
-  <main class="max-w-3xl mx-auto px-4 py-10 bg-white rounded-lg shadow-md">
-    <img src="https://source.unsplash.com/random/900x400" alt="Article Image" class="w-full h-64 object-cover rounded-lg mb-6">
+  <main class="max-w-7xl mx-auto px-4 py-10 bg-white rounded-lg shadow-md">
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-10">
+
+    <!-- Article Section (Left - spans 2 columns) -->
+    <div class="lg:col-span-2">
+      <img src="https://source.unsplash.com/random/900x400" alt="Article Image" class="w-full h-64 object-cover rounded-lg mb-6">
     
     <h2 class="text-3xl font-bold text-indigo-700 mb-4">Autobiography</h2>
     <p class="text-sm text-gray-500 mb-4">Published on April 22, 2025 · by Nicholai Thomas</p>
 
     <article class="space-y-6 text-gray-700 leading-relaxed">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vehicula sem vitae velit blandit, at aliquet libero euismod.</p>
-      <p>Curabitur at odio eget lorem laoreet convallis. Donec sit amet urna in justo posuere vestibulum. Sed vitae ipsum ac mi ultrices tincidunt.</p>
-      <p>Vivamus eget arcu a turpis tincidunt varius. Proin bibendum ipsum at mauris facilisis, a commodo purus pulvinar.</p>
-      <p>Nullam fermentum tincidunt arcu, vitae dapibus turpis. Praesent scelerisque nec lorem sit amet tempor.</p>
+      <h3 class="text-md font-bold">Finding My Flow: A Journey Through Learning Styles</h3>
+      <p>When I first started high school, I had no idea what a “learning style” even meant. I figured everyone just read their textbooks, memorized facts, and hoped they remembered enough to pass the test. That’s how middle school had worked for me, and I didn’t question it. But by the end of freshman year, I realized something had to change.</p>
+      <p>Biology class hit me like a truck. I’d stare at the textbook for hours, trying to memorize the diagrams and vocabulary, but come test day, my mind would go blank. Meanwhile, my best friend Alyssa barely studied and always got A’s. I was frustrated, confused, and honestly a little embarrassed.</p>
+      <p>One day after a rough quiz grade, I asked Alyssa how she studied.</p>
+      <p>“I draw everything out,” she said. “Mind maps, sketches, colors. I have to see it all laid out, like a picture in my head.”</p>
+      <p>That blew my mind. I’d been reading straight from the textbook, line after line, with no color, no sketches, no connection. That night, I tried her method. I drew out the cell structure with different colored pens and arrows showing how everything worked together. It wasn’t perfect, but something clicked.</p>
+      <p>By the time finals came, I had notebooks full of diagrams, color-coded study guides, and even little comic strips of processes like mitosis. I didn’t just pass—I aced the exam.</p>
+      <p>That’s when I realized I’m a visual learner.</p>
+      <p>Over the next few years, I refined that discovery. In sophomore year, world history became one of my favorite classes because I could turn historical timelines into infographics and maps. I even made my own flashcards with doodles and symbols to help me remember events. In chemistry, I used colorful cheat sheets and created visual analogies for chemical bonds (like friendships and breakups—high school drama helped me remember).</p>
+      <p>Junior year, I had to tackle more abstract stuff, like algebra and literature analysis. Visual learning didn’t always come easy here, but I adapted. For math, I used graph paper and drew out problems, turning word problems into diagrams. For English, I highlighted my books in different colors—yellow for main ideas, pink for figurative language, green for symbolism. My essays improved when I mapped them out visually before writing.</p>
+      <p>By senior year, I was confident. I knew that for me to learn something, I had to see it. And not just once. I had to break it down, lay it out visually, and color-code it so it made sense. I even started helping my classmates find their own learning styles. One of them realized they were an auditory learner and started recording lectures. Another discovered she learned best through teaching others.</p>
+      <p>College was a whole new level. I went in thinking I had it all figured out. I was ready with my colored pens and highlighters, prepared to conquer every class visually. And at first, it worked. In my psychology class, I drew out the brain and labeled the parts with functions and examples. In statistics, I used graphs and charts to break down data.</p>
+      <p>Then came philosophy.</p>
+      <p>No diagrams, no neat concepts to map out. Just abstract ideas, long readings, and debates about reality and ethics. I was lost. My visual techniques barely helped.</p>
+      <p>That’s when I met Professor Daniels. He saw me struggling and asked how I usually studied. I explained my visual approach, and he nodded.</p>
+      <p>“That’s a great start,” he said. “But don’t be afraid to blend styles. Some ideas can’t just be seen—they need to be heard, discussed, experienced.”</p>
+      <p>So I tried something new. I joined a study group for the class. We’d talk through concepts and challenge each other’s ideas. I recorded lectures and listened back while walking to class. I even started writing out philosophical arguments like stories, with characters and dialogues.</p>
+      <p>It worked. Slowly, the fog lifted. I still used visuals—mind maps of arguments and timelines of philosophical movements—but now I paired them with discussion and writing. I realized I wasn’t just a visual learner. I was a multi-modal learner. Visuals helped me get started, but I needed other tools for deeper understanding.</p>
+      <p>Now, in my second year of college, I’ve built a flexible learning style toolkit. I still make colorful diagrams, but I also join study groups, use flashcards with audio cues, and teach concepts to friends. I’ve learned that your learning style isn’t a box—it’s more like a set of clothes. Some days you need a warm jacket (visuals), other days a conversation with a friend (auditory), and sometimes, you’ve got to dive in and do the thing yourself (kinesthetic).</p>
+      <p>Looking back, I’m grateful for all the struggles. They taught me that learning isn’t just about hard work—it’s about learning how to learn. And once you find your flow, there’s no limit to what you can understand.</p>
     </article>
+    </div>
 
-        <!-- Gallery Section (Right) -->
-    <div class="lg:w-1/3">
-      <h3 class="text-2xl font-semibold text-indigo-700 mb-4">Gallery</h3>
-      <div class="grid grid-cols-1 gap-4">
+
+    <!-- Gallery Section (Right column) -->
+    <div class="space-y-4">
+      <h3 class="text-2xl font-semibold text-indigo-700">Gallery</h3>
+      <div class="space-y-4">
         <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fwww.glenmuirhighschool.edu.jm%2Fimages%2Findex_images%2Fcrest.png&sp=1745368074Tdd4a328d4867db752756937aab02c9fcc2d493d989b258b5daf44cc18f0e27da" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 1">
         <img src="https://i.pinimg.com/736x/58/a4/df/58a4df93aa0b4520cd4e73f71b15f3b6.jpg" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 2">
         <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fglenmuirhspsa.com%2Fwp-content%2Fuploads%2F2018%2F06%2Fsign.jpg&sp=1745371486Te54e55ad7f391d3c5759288a64237963c06e6da93f5118a57793eb3f881a875b" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 3">
@@ -51,6 +73,7 @@
     <div class="mt-8">
       <a href="blog.html" class="text-indigo-600 hover:underline">← Back to Blog</a>
     </div>
+  </div>
   </main>
 
   <!-- Related Posts (optional) -->
